<resources>
    <string name="app_name">MusicPlayerApp</string>
    <string name="play">Play</string>
    <string name="skip_next">Skip next</string>
    <string name="skip_previous">Skip previous</string>
    <string name="group_albums">Albums</string>
    <string name="group_songs">Songs</string>
    <string name="group_artists">Artists</string>
    <string name="track_name">Track name</string>
    <string name="artist_name">Artist name</string>
    <string name="album_name">Album name</string>
    <string name="track_length">Track length</string>
    <string name="play_track">Play track</string>
    <string name="album_s">Album(s)</string>
    <string name="song_s">Song(s)</string>
    <string name="ashamaluevmusic">AShamaluevMusic</string>
    <string name="cinematic_piano_ambient">Cinematic Piano Ambient</string>
    <string name="inspired">Inspired</string>
    <string name="beautiful">Beautiful</string>
    <string name="cinematic_inspiration">Cinematic Inspiration</string>
    <string name="cinematic_trailer">Cinematic Trailer</string>
    <string name="emotional">Emotional</string>
    <string name="inspirational_acoustic">Inspirational Acoustic</string>
    <string name="inspirational_day">Inspirational Day</string>
    <string name="inspire">Inspire</string>
    <string name="epic_motivational">Epic Motivational</string>
    <string name="motivation">Motivation</string>
    <string name="motivational">Motivational</string>
    <string name="motivational_upbeat">Motivational Upbeat</string>
    <string name="my_motivation">My Motivation</string>
    <string name="triumphal">Triumphal</string>
    <string name="positive">Positive</string>
    <string name="energetic_upbeat">Energetic Upbeat</string>
    <string name="uplifting_rock">Uplifting Rock</string>
    <string name="happy_upbeat">Happy Upbeat</string>
    <string name="positive_pop_rock">Positive Pop Rock</string>
    <string name="inspirational_pop_rock">Inspirational Pop Rock</string>
    <string name="upbeat_rock">Upbeat Rock</string>
    <string name="motivational_pop_rock">Motivational Pop Rock</string>
    <string name="happy_pop_rock">Happy Pop Rock</string>
    <string name="energetic_rock">Energetic Rock</string>
    <string name="motivational_rock">Motivational Rock</string>
    <string name="happy_ukulele">Happy Ukulele</string>
    <string name="uplifting_pop_rock">Uplifting Pop Rock</string>
    <string name="be_happy">Be Happy</string>
    <plurals name="numberOfAlbums">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="numberOfSongs">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
</resources>
