<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_list">


    <com.example.android.musicplayerapp.SquareImageView
        android:id="@+id/track_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/imageStyle" />

    <TextView
        android:id="@+id/track_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_name"
        app:layout_constraintStart_toEndOf="@id/track_image"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/textStyleMedium" />

    <TextView
        android:id="@+id/track_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/track_image"
        style="@style/textStyleSmall" />

    <View
        android:id="@+id/splitter_view"
        app:layout_constraintStart_toEndOf="@id/track_artist_name"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/splitterStyle" />

    <TextView
        android:id="@+id/track_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_length"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/splitter_view"
        style="@style/textStyleSmall"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/list_margin"
        android:contentDescription="@string/play_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play_track" />

</android.support.constraint.ConstraintLayout>