<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/current_playing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seekbar_height"
        app:layout_constraintBottom_toTopOf="@+id/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/skip_previous"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:contentDescription="@string/skip_previous"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/play" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/skip_next"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:contentDescription="@string/skip_next"
        android:src="@drawable/ic_skip_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/play" />

</merge>